--- a/apps/wxt/entrypoints/popup/index.html
+++ b/apps/wxt/entrypoints/popup/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WXT</title>
+    <style>
+      html,
+      body {
+        width: 24rem; /* 384px (matches w-96) */
+        height: 24rem; /* 384px (matches h-96) */
+        margin: 0;
+        padding: 0;
+        overflow: hidden; /* Prevents scrollbars */
+      }
+      #root {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
